fix: solucione error de que no se muestren las peliculas en su categoria al cambiar manualmente el link. movie-list.component

--- a/Films/src/app/components/movie-list-components/movie-list-components.component.html
+++ b/Films/src/app/components/movie-list-components/movie-list-components.component.html
@@ -2,7 +2,7 @@
     <div *ngFor="let film of filteredMovies" class="movie-item">
       <img [src]="film.image" alt="{{ film.title }}">
       <h3>{{ film.title }}</h3>
-      <p>{{ film.description }}</p>
-      <span>Géneros: {{ film.genre.join(', ') }}</span>
+      <!-- <p>{{ film.description }}</p>
+      <span>Géneros: {{ film.genre.join(', ') }}</span> -->
     </div>
   </div>
