--- a/Films/src/app/components/film-detail/film-detail.component.css
+++ b/Films/src/app/components/film-detail/film-detail.component.css
@@ -1,8 +1,18 @@
 .recuadroFilm {
-    width: 200px !important;
+    width: 410px !important;
     background-color: black !important;
     color: white !important;
     padding: 15px !important;
-    border-radius: 10px !important;
-    margin: 10px;
+    margin-top: 40px !important;
+    margin-bottom: 40px !important;
+    margin-left: 200px !important;
+}
+
+img {
+    width: 380px;
+    height: 530px;
+}
+
+::ng-deep .classTitle {
+    text-align: center !important;
 }
