--- a/Films/src/app/components/film-detail/film-detail.component.html
+++ b/Films/src/app/components/film-detail/film-detail.component.html
@@ -1,4 +1,7 @@
 
-<div *ngIf = "movie" class = "recuadroFilm">
-    <img alt = "Imagen No Disponible" [src] = "movie.image">
+<div *ngIf = "movie">
+    <div class = "recuadroFilm">
+        <img alt = "Imagen No Disponible" [src] = "movie.image">
+    </div>
+    <h2> {{movie.title}} </h2>
 </div>
