style: modifique la vista de las peliculas por categorias, que sean igual que el inicio, en ambas puse los botones dentro de la tarjeta de la pelicula y traslade algunas funciones que reutilizaba en ambos componentes a un servicio compartido para no repetir codigo, ademas agregue que se muestren las opciones alternativas en la vista por categorias y elimine algunos console.logs de prueba. movie-list.component, inicio-aux.component y shared-services.service

--- a/Films/src/app/components/movie-list-components/movie-list-components.component.html
+++ b/Films/src/app/components/movie-list-components/movie-list-components.component.html
@@ -1,8 +1,17 @@
-<div *ngIf="filteredMovies.length > 0;">
-    <div *ngFor="let film of filteredMovies" class="movie-item">
-      <img [src]="film.image" alt="{{ film.title }}">
-      <h3>{{ film.title }}</h3>
-      <!-- <p>{{ film.description }}</p>
-      <span>Géneros: {{ film.genre.join(', ') }}</span> -->
-    </div>
-  </div>
+<app-alternative-options></app-alternative-options>
+
+<div *ngIf="filteredMovies.length > 0">
+  <table>
+    <tr *ngFor="let group of getMovieGroups(filteredMovies)">
+      <td *ngFor="let film of group" class="recuadroCelda">
+          <img [src]="film.image" alt="Imagen no disponible" width="200" height="300">
+          <b style="font-size: 15px;">{{ film.title }}</b>
+
+          <div class = "button-container">
+            <button class="btn btn-primary" (click)="navegarFilmDetail(film.rank)">Ficha técnica</button>
+            <button class="btn btn-primary" (click)="agregarPeliculaAlCarrito(film)">🛒</button>
+          </div>
+      </td>
+    </tr>
+  </table>
+</div>
