--- a/Films/src/app/components/inicio-aux/inicio-aux.component.html
+++ b/Films/src/app/components/inicio-aux/inicio-aux.component.html
@@ -1,4 +1,15 @@
-<div class = "classDiv">
-    <div id="body">
-    </div>
-</div>
+<div *ngIf="filteredFilms.length > 0">
+    <table>
+      <tr *ngFor="let group of getMovieGroups(filteredFilms)">
+        <td *ngFor="let film of group" class="recuadroCelda">
+            <img [src]="film.image" alt="Imagen no disponible" width="200" height="300">
+            <b style="font-size: 15px;">{{ film.title }}</b>
+  
+            <div class = "button-container">
+              <button class="btn btn-primary" (click)="navegarFilmDetail(film.rank)">Ficha técnica</button>
+              <button class="btn btn-primary" (click)="agregarPeliculaAlCarrito(film)">🛒</button>
+            </div>
+        </td>
+      </tr>
+    </table>
+  </div>
