refactor: traslade la funcionalidad de cerrar sesion hacia perfil.component. Tambien, refactorice el codigo de perfil.component.ts

--- a/Films/src/app/components/navbar/navbar.component.html
+++ b/Films/src/app/components/navbar/navbar.component.html
@@ -17,7 +17,7 @@
            </button>
         </div>
         <div class="box-profile">
-            <button class="button-profile" (click)="navegar('perfil')">
+            <button class="button-profile" (click)="navegarPerfil()">
                <img class="img-profile" src="/assets/person.png" alt="">             
             </button>
         </div>
