--- a/Films/src/app/components/perfil/perfil.component.html
+++ b/Films/src/app/components/perfil/perfil.component.html
@@ -30,7 +30,7 @@
           <div *ngIf="firstname_fc?.hasError('soloLetras')" class="text-danger">Solo letras</div>
         </div>
 
-        <div id="resultado-operacion" class="mt-3">{{result}}</div>
+        <div id="resultado-operacion" class="mt-3">{{resultFirstName}}</div>
       </div>
 
       <h4>Apellido</h4>
@@ -56,7 +56,7 @@
           <div *ngIf="firstname_fc?.hasError('soloLetras')" class="text-danger">Solo letras</div>
         </div>
 
-        <div id="resultado-operacion" class="mt-3">{{result}}</div>
+        <div id="resultado-operacion" class="mt-3">{{resultLastName}}</div>
       </div>
 
       <h4>DNI</h4>
@@ -81,7 +81,7 @@
           <div *ngIf="dni_fc?.hasError('required')" class="text-danger">El DNI es requerido</div>
         </div>
 
-        <div id="resultado-operacion" class="mt-3">{{result}}</div>
+        <div id="resultado-operacion" class="mt-3">{{resultDNI}}</div>
       </div>
     </div> 
   </section>
@@ -114,7 +114,7 @@
           <div *ngIf="email_fc?.hasError('email')" class="text-danger">Formato de Email Incorrecto</div>
         </div>
 
-        <div id="resultado-operacion" class="mt-3">{{result}}</div>
+        <div id="resultado-operacion" class="mt-3">{{resultEmail}}</div>
       </div>
     </div>
   </section>
@@ -144,7 +144,7 @@
           <div *ngIf="address_fc?.hasError('required')" class="text-danger">La direccion es requerida</div>
         </div>
 
-        <div id="resultado-operacion" class="mt-3">{{result}}</div>
+        <div id="resultado-operacion" class="mt-3">{{resultAddress}}</div>
       </div>
     </div>
   </section>
