--- a/Films/src/app/components/navbar/navbar.component.css
+++ b/Films/src/app/components/navbar/navbar.component.css
@@ -122,21 +122,26 @@ img{
 
 .button-main-menu, .button-profile, .button-shopping-cart{
     border: 0.1rem solid transparent;
-    border-radius: 0rem;
-    background: transparent;
+    border-radius: 0rem; 
+    background-color:transparent;
     transition: border 0.3s ease, border-radius 0.3s ease;
+    display: flex;
+    justify-content: center;
     cursor: pointer;
+}
+
+.button-profile{
+    margin: 0%;
 }
 
 .button-main-menu:hover, 
 .button-profile:hover, 
 .button-shopping-cart:hover{
-    background: rgb(220, 220, 220);
 }
 
 .img-profile{
-    width: 70px;
-    height: 70px;
+    width: 62px;
+    height: 62px;
 }
 
 .button-shopping-cart{
@@ -148,8 +153,8 @@ img{
 }
 
 .img-shopping-cart{
-    width: 55px;
-    height: 55px;
+    width: 47px;
+    height: 47px;
 }
 
 .button-main-menu:hover,
@@ -166,12 +171,46 @@ img{
     grid-area: box-extras;
 }
 
+.box-profile{
+    display: flex;
+    justify-content: center;
+}
+
 .box-shopping-cart{
-    margin-right: 3.5rem;
+    margin-right: 2rem;
     display: flex;
     justify-content: center;
     align-items: center;
 }
+
+.box-signIn-signUp{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 0%;
+}
+
+.button-sign-in,
+.button-sign-up{
+    background-color: rgb(207, 204, 204);
+    padding: 0.5rem;
+    font-size: 1.1rem;
+    border: 0.1rem solid transparent;
+    transition: border 0.3s ease, border-radius 0.3s ease;
+    cursor: pointer;
+    margin: 0%;
+}
+
+.button-sign-in{
+    margin-right: 2rem;
+}
+
+.button-sign-in:hover,
+.button-sign-up:hover{
+    border-radius: 1rem;
+    background-color: rgb(160, 160, 160);
+}
+
 
 
   
