--- a/Films/src/app/components/navbar/navbar.component.html
+++ b/Films/src/app/components/navbar/navbar.component.html
@@ -11,14 +11,23 @@
     </div>
 
     <div class="box-extras">
-        <div class="box-shopping-cart">
+        <div *ngIf="showProfileAndShoppingCart" class="box-shopping-cart">
            <button class="button-shopping-cart" (click)="navegarCarrito()">
                <img class="img-shopping-cart" src="/assets/Shopping cart.png" alt="">    
            </button>
         </div>
-        <div class="box-profile">
+        <div *ngIf="showProfileAndShoppingCart" class="box-profile">
             <button class="button-profile" (click)="navegarPerfil()">
                <img class="img-profile" src="/assets/person.png" alt="">             
+            </button>
+        </div>
+        
+        <div *ngIf="!showProfileAndShoppingCart" class="box-signIn-signUp">
+            <button class="button-sign-in" (click)="signIn()">
+                Sign in
+            </button>
+            <button class="button-sign-up" (click)="signUp()">
+                Sign up
             </button>
         </div>
     </div>
