--- a/Films/src/app/components/alternative-options/alternative-options/alternative-options.component.css
+++ b/Films/src/app/components/alternative-options/alternative-options/alternative-options.component.css
@@ -8,6 +8,7 @@
     margin-bottom: 2rem;
     display: flex;
     justify-content: center;
+    align-items: center;
 }
 
 .box-categories {
@@ -15,6 +16,7 @@
     position: relative; 
     display: flex;
     align-items: center;
+    margin-right: 2rem;
 }
 
 .box-information-categories {
@@ -23,79 +25,81 @@
     cursor: pointer;
 }
 
-.option-categories{
-    display: flex;
-    align-items: center;
-    padding: 0.1rem;
-    font-size: 1.15rem;
-    background: transparent;
-    border: none;
-    cursor: pointer;
-}
-
 .img-arrow {
     display: flex;
     align-items: center;
-    padding-top: 0.1rem;
     width: 35px;
     height: 40px;
 }
 
-::ng-deep .categories-container {
+.categories-container {
     position: absolute;
     top: 100% ; /* Coloca el recuadro justo debajo del botón */
     left: 0;
     background-color: rgba(21, 21, 21, 0.8) ; /* Color de fondo gris semitransparente */
-    border-radius: 0.5rem;
     padding: 0.4rem;
     box-shadow: 0 4px 8px rgba(77, 77, 77, 0.2); /* Sombra */
     z-index: 10;
-    width: calc(100% + 1rem);
+    width: calc(100% + 7.8rem);
 }
 
-::ng-deep .categories {
+.categories {
     list-style: none;
     padding: 0;
     margin: 0;
     display: grid;
+    grid-template-columns: repeat(2, 1fr); /* Dos columnas */
+    gap: 0.5rem; /* Espacio entre las categorías */
     justify-content: center;
-    width: 100%; 
+    width: 100%;
 }
 
-::ng-deep .li-category {
-    padding: 0.3rem 1rem;
+.li-category {
+    padding: 0.2rem 1rem;
     width: 100%; /* Ocupa todo el ancho del contenedor */
 }
 
-::ng-deep .li-category:hover {
+.li-category:hover {
     background-color: rgba(169, 169, 169, 0.5);
     width: 100% ; /* Asegura que el hover ocupe el ancho completo */
 }
 
-::ng-deep .button-category {
+.button-category {
     color: #fff;
     background: transparent ;
     border: none;
-    padding: 0.6rem;
+    padding: 0.4rem;
     width: 100%; /* Asegura que el botón ocupe todo el ancho del li */
     text-align: center; /* Alinea el texto a la izquierda */
     font-size: 1rem;
+    font-weight: 400;
     cursor: pointer;
 }
 
-.box-offers {
-    margin-left: 4rem;
+.option-categories{
+    display: flex;
+    align-items: center;
+    text-align: center;
+    justify-content: center;
+    padding: 0.3rem;
+    padding-inline: 0.5rem;
+    font-size: 1.15rem;
+    background-color: rgb(207, 204, 204);
+    border: none;
+    cursor: pointer;
 }
  
 .button-offers {
+    background-color: rgb(207, 204, 204);
     cursor: pointer;
     padding: 0.7rem;
+    padding-inline: 1.15rem;
     font-size: 1.15rem;
-    background: transparent;
     border: none;
+    transition: border 0.3s ease, border-radius 0.3s ease;
 }
 
 .option-categories:hover,
 .button-offers:hover{
-    color:grey;
+    color: rgb(63, 63, 63);
 }
