--- a/Films/src/app/components/alternative-options/alternative-options/alternative-options.component.html
+++ b/Films/src/app/components/alternative-options/alternative-options/alternative-options.component.html
@@ -2,7 +2,7 @@
     <div class="box-categories" (mouseover)="showCategories()" (mouseleave)="hideCategories()">
         <div class="box-information-categories">
             <button class="option-categories">
-                Categories
+                <p>Categories</p>
                 <img class="img-arrow" src="/assets/arrow_drop_down.png" alt="">
             </button>
         </div>
