refactor: mejoria de la logica para saber si un usuario esta logueado, feat: agregado de funcionalidad de redireccion a seccion de ofertas

--- a/Films/src/app/components/alternative-options/alternative-options/alternative-options.component.html
+++ b/Films/src/app/components/alternative-options/alternative-options/alternative-options.component.html
@@ -17,6 +17,6 @@
     </div>
 
     <div class="box-offers">
-        <button class="button-offers">Offers</button>
+        <button class="button-offers" (click)="navegar('ofertas')">Offers</button>
     </div>
 </section>
